--- a/app/js/settings-data.json
+++ b/app/js/settings-data.json
@@ -1,4 +1,14 @@
 {
-  "softwareVersion": "10.2.3",
-  "ispDownloadSpeed": "12.8"
+  "softwareVersion"           : "10.2.3",
+  "ispDownloadSpeed"          : "12.8",
+  "ispUploadSpeed"            : "3.6",
+  "softwareVersionUpdateDate" : "16/06/2014",
+  "lastCheckedDate"           : "18/06/2014",
+  "routerBand"                : "5",
+  "routerChannel"             : "auto",
+  "routerCustomChannel"       : "??",
+  "routerChannelBandwidth"    : "20",
+  "routerVpnConfiguration"    : "None"
+  
+
 }
