--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "karma-story-reporter": "~0.2.2",
     "grunt-karma": "~0.6.2",
     "grunt": "",
-    "karma-sauce-launcher": "~0.1.8"
+    "karma-sauce-launcher": "~0.1.8",
+    "handlebars": "1.3.0"
   }
 }
