Make setSSID work again.

--- a/etc/lighttpd/lighttpd.conf
+++ b/etc/lighttpd/lighttpd.conf
@@ -30,7 +30,7 @@ ssl.cipher-list = "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECD
 ssl.use-sslv2 = "disable"
 
 setenv.add-response-header = (
-  "X-Content-Security-Policy" => "allow 'self'",
+  "Content-Security-Policy" => "default-src 'self'; img-src 'self' data:",
   "X-Frame-Options" => "SAMEORIGIN",
   "X-Content-Type-Options" => "nosniff"
 )
