--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cerowrt"]
 	path = cerowrt
 	url = https://github.com/dtaht/cerowrt-3.10.git
+[submodule "ow-python"]
+	path = ow-python
+	url = https://github.com/EFForg/ow-python
