--- a/etc/lighttpd/lighttpd.conf
+++ b/etc/lighttpd/lighttpd.conf
@@ -1,15 +1,15 @@
 # lighttpd configuration file for OpenWireless
-# 
+#
 ## modules to load
 # all other module should only be loaded if really neccesary
 # - saves some time
 # - saves memory
-server.modules = ( 
-	"mod_alias", 
-	"mod_setenv",
-	"mod_simple_vhost",
-	"mod_cgi",
-	"mod_expire",
+server.modules = (
+  "mod_alias",
+  "mod_setenv",
+  "mod_simple_vhost",
+  "mod_cgi",
+  "mod_expire",
 )
 
 # force use of the "write" backend (closes: #2401)
@@ -19,11 +19,11 @@ server.document-root = "/www/"
 index-file.names = ( "index.html" )
 alias.url += ( "/cgi-bin" => "/www/cgi-bin" )
 $HTTP["url"] =~ "^/cgi-bin" {
-    cgi.assign = ( "" => "" )                                              
-} 
+    cgi.assign = ( "" => "" )
+}
 
 #### SSL engine
-### use PFS 
+### use PFS
 # https://raymii.org/s/tutorials/Pass_the_SSL_Labs_Test_on_Lighttpd_%28Mitigate_the_CRIME_and_BEAST_attack_-_Disable_SSLv2_-_Enable_PFS%29.html
 ssl.honor-cipher-order = "enable"
 ssl.cipher-list = "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-RC4-SHA:ECDHE-RSA-RC4-SHA:ECDH-ECDSA-RC4-SHA:ECDH-RSA-RC4-SHA:ECDHE-RSA-AES256-SHA:RC4-SHA"
@@ -39,7 +39,7 @@ server.port = 80
 server.bind = "172.30.42.1"
 
 $SERVER["socket"] == "172.30.42.1:80" {
-  server.document-root = "/www/unencrypted"
+  index-file.names = ( "welcome.html" )
 }
 
 $SERVER["socket"] == "172.30.42.1:443" {
@@ -48,24 +48,24 @@ $SERVER["socket"] == "172.30.42.1:443" {
 }
 
 ## mimetype mapping
-mimetype.assign = (  
-	".pdf"   => "application/pdf",
-	".class" => "application/octet-stream",
-	".pac"   => "application/x-ns-proxy-autoconfig",
-	".swf"   => "application/x-shockwave-flash",
-	".wav"   => "audio/x-wav",
-	".gif"   => "image/gif",
-	".jpg"   => "image/jpeg",
-	".jpeg"  => "image/jpeg",
-	".png"   => "image/png",
-	".css"   => "text/css",
-	".html"  => "text/html; charset=utf-8",
-	".htm"   => "text/html",
-	".js"    => "text/javascript",
-	".txt"   => "text/plain",
-	".dtd"   => "text/xml",
-	".xml"   => "text/xml",
-	".svg"   => "image/svg+xml"
+mimetype.assign = (
+  ".pdf"   => "application/pdf",
+  ".class" => "application/octet-stream",
+  ".pac"   => "application/x-ns-proxy-autoconfig",
+  ".swf"   => "application/x-shockwave-flash",
+  ".wav"   => "audio/x-wav",
+  ".gif"   => "image/gif",
+  ".jpg"   => "image/jpeg",
+  ".jpeg"  => "image/jpeg",
+  ".png"   => "image/png",
+  ".css"   => "text/css",
+  ".html"  => "text/html; charset=utf-8",
+  ".htm"   => "text/html",
+  ".js"    => "text/javascript",
+  ".txt"   => "text/plain",
+  ".dtd"   => "text/xml",
+  ".xml"   => "text/xml",
+  ".svg"   => "image/svg+xml"
  )
 
 ## to help the rc.scripts
