Redirect 172.30.42.1 to gw.home.lan.

--- a/etc/lighttpd/lighttpd.conf
+++ b/etc/lighttpd/lighttpd.conf
@@ -47,6 +47,13 @@ $SERVER["socket"] == "172.30.42.1:443" {
   ssl.pemfile = "/etc/lighttpd/lighttpd.pem"
 }
 
+# When users hit the number IP address, send them to the hostname instead.
+$HTTP["host"] == "172.30.42.1" {
+  url.redirect = (
+    "^/(.*)" => "http://gw.home.lan/"
+  )
+}
+
 ## mimetype mapping
 mimetype.assign = (
   ".pdf"   => "application/pdf",
