Redirect to HTTP for logged-in users.

--- a/etc/lighttpd/lighttpd.conf
+++ b/etc/lighttpd/lighttpd.conf
@@ -53,6 +53,13 @@ $HTTP["host"] == "172.30.42.1" {
     "^/(.*)" => "http://gw.home.lan/"
   )
 }
+# If the user is logged in, send them to HTTPS.
+$HTTP["cookie"] =~ "logged_in" {
+  url.redirect = (
+    "^/(.*)" => "https://gw.home.lan/"
+  )
+}
+
 
 ## mimetype mapping
 mimetype.assign = (
