Fix lighttpd redirects.

--- a/etc/lighttpd/lighttpd.conf
+++ b/etc/lighttpd/lighttpd.conf
@@ -9,6 +9,7 @@ server.modules = (
   "mod_setenv",
   "mod_simple_vhost",
   "mod_cgi",
+  "mod_redirect",
   "mod_expire",
 )
 
@@ -21,6 +22,12 @@ alias.url += ( "/cgi-bin" => "/www/cgi-bin" )
 $HTTP["url"] =~ "^/cgi-bin" {
     cgi.assign = ( "" => "" )
 }
+$HTTP["host"] == "172.30.42.1" {
+  url.redirect = (
+    "^/(.*)" => "http://gw.home.lan/"
+  )
+}
+
 
 #### SSL engine
 ### use PFS
@@ -38,28 +45,23 @@ setenv.add-response-header = (
 server.port = 80
 server.bind = "172.30.42.1"
 
+# When accessing on port 80, show the welcome page and warn the user that they
+# are about to get a cert warning.
 $SERVER["socket"] == "172.30.42.1:80" {
   index-file.names = ( "welcome.html" )
+  # However, if they are logged in, take them straight to the HTTPS side of
+  # things.
+  $HTTP["cookie"] =~ "logged_in" {
+    url.redirect = (
+      "^/(.*)" => "https://gw.home.lan/"
+    )
+  }
 }
 
 $SERVER["socket"] == "172.30.42.1:443" {
   ssl.engine = "enable"
   ssl.pemfile = "/etc/lighttpd/lighttpd.pem"
 }
-
-# When users hit the number IP address, send them to the hostname instead.
-$HTTP["host"] == "172.30.42.1" {
-  url.redirect = (
-    "^/(.*)" => "http://gw.home.lan/"
-  )
-}
-# If the user is logged in, send them to HTTPS.
-$HTTP["cookie"] =~ "logged_in" {
-  url.redirect = (
-    "^/(.*)" => "https://gw.home.lan/"
-  )
-}
-
 
 ## mimetype mapping
 mimetype.assign = (
