Disable symlinks in lighttpd.

--- a/etc/lighttpd/lighttpd.conf
+++ b/etc/lighttpd/lighttpd.conf
@@ -16,6 +16,8 @@ server.modules = (
 # force use of the "write" backend (closes: #2401)
 server.network-backend = "write"
 server.document-root = "/www/"
+# Disable symlinks to be paranoid.
+server.follow-symlink = "disable"
 
 index-file.names = ( "index.html" )
 alias.url += ( "/cgi-bin" => "/www/cgi-bin" )
