Put local-lighttpd etc in a directory.

--- a/local-lighttpd/local-lighttpd.conf
+++ b/local-lighttpd/local-lighttpd.conf
@@ -70,7 +70,7 @@ mimetype.assign = (
  )
 
 ## to help the rc.scripts
-server.pid-file = "./local-lighttpd.pid"
+server.pid-file = "./etc/local-lighttpd.pid"
 
 ## virtual directory listings
 server.dir-listing = "enable"
@@ -84,5 +84,5 @@ server.dir-listing = "enable"
 server.upload-dirs = ( "/tmp" )
 
 setenv.add-environment = (
-  "OVERRIDE_ETC" => var.CWD
+  "OVERRIDE_ETC" => var.CWD + "/etc"
 )
