Changes to make UI run under local lighttpd.

--- a/local-lighttpd/local-lighttpd.conf
+++ b/local-lighttpd/local-lighttpd.conf
@@ -84,5 +84,6 @@ server.dir-listing = "enable"
 server.upload-dirs = ( "/tmp" )
 
 setenv.add-environment = (
-  "OVERRIDE_ETC" => var.CWD + "/etc"
+  "OVERRIDE_ETC" => var.CWD + "/etc",
+  "OVERRIDE_PATH" => var.CWD
 )
