--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "test": "nodejs -e \"require('grunt').tasks(['test']);\""
+    "test": "js -e \"require('grunt').tasks(['test']);\""
   },
   "author": "Kevin Wilson",
   "devDependencies": {
