Adding one more sudo to the update code, and making everything run as www-data

--- a/etc/lighttpd/lighttpd.conf
+++ b/etc/lighttpd/lighttpd.conf
@@ -95,7 +95,7 @@ server.dir-listing = "enable"
 ## change uid to <uid> (default: don't care)
 # We'd like to run the server as root, but a couple of commands
 # (ping and iptaccount) won't run as user www-data.
-#server.username = "www-data"
-#server.groupname = "www-data"
+server.username = "www-data"
+server.groupname = "www-data"
 
 server.upload-dirs = ( "/tmp" )
