Allow running multiple lighttpds on different ports.

--- a/local-lighttpd/local-lighttpd.conf
+++ b/local-lighttpd/local-lighttpd.conf
@@ -14,11 +14,11 @@ server.modules = (
 
 # force use of the "write" backend (closes: #2401)
 server.network-backend = "write"
-server.document-root = "../app/"
+server.document-root = "REPO_DIR/app"
 server.follow-symlink = "disable"
 
 index-file.names = ( "index.html" )
-alias.url += ( "/cgi-bin/routerapi" => "../routerapi" )
+alias.url += ( "/cgi-bin/routerapi" => "REPO_DIR/routerapi" )
 $HTTP["url"] =~ "^/cgi-bin/routerapi" {
     cgi.assign = ( "" => "" )
 }
@@ -36,14 +36,13 @@ setenv.add-response-header = (
   "X-Content-Type-Options" => "nosniff"
 )
 
-server.port = 8888
-server.bind = "127.0.0.1"
+server.port = HTTP_PORT
 
-$SERVER["socket"] == "127.0.0.1:8888" {
+$SERVER["socket"] == ":HTTP_PORT" {
   index-file.names = ( "welcome.html" )
 }
 
-$SERVER["socket"] == "127.0.0.1:8443" {
+$SERVER["socket"] == ":HTTPS_PORT" {
   ssl.engine = "enable"
   ssl.pemfile = "./local-lighttpd.pem"
 }
@@ -70,7 +69,7 @@ mimetype.assign = (
  )
 
 ## to help the rc.scripts
-server.pid-file = "./etc/local-lighttpd.pid"
+server.pid-file = "./local-lighttpd.pid"
 
 ## virtual directory listings
 server.dir-listing = "enable"
@@ -84,6 +83,6 @@ server.dir-listing = "enable"
 server.upload-dirs = ( "/tmp" )
 
 setenv.add-environment = (
-  "OVERRIDE_ETC" => var.CWD + "/etc",
-  "OVERRIDE_PATH" => var.CWD
+  "OVERRIDE_ETC" => var.CWD,
+  "OVERRIDE_PATH" => var.CWD + "/.."
 )
