Disable mdns reflector, pending security review

--- a/etc/avahi/avahi-daemon.conf
+++ b/etc/avahi/avahi-daemon.conf
@@ -17,7 +17,7 @@ publish-aaaa-on-ipv4=yes
 #publish-resolv-conf-dns-servers=yes
 
 [reflector]
-enable-reflector=yes
+enable-reflector=no
 #reflect-ipv6=no
 
 [rlimits]
