--- a/lighttpd/lighttpd.conf.template
+++ b/lighttpd/lighttpd.conf.template
@@ -93,4 +93,5 @@ server.groupname = "%(GROUP)s"
 
 server.upload-dirs = ( "/tmp" )
 
-include_shell "cat conf.d/*.conf 2> /dev/null"
+# @rangak : Commented out line below as it is causing Web-UI not to show up on the router
+#include_shell "cat conf.d/*.conf 2> /dev/null"
