Fix commit hash for oldpackages as well so package moves to github dont break things

--- a/OWrt/feeds.conf
+++ b/OWrt/feeds.conf
@@ -2,5 +2,5 @@ src-git packages https://github.com/openwrt/packages.git^5b264252584ef750ad00cd7
 src-git routing https://github.com/openwrt-routing/packages.git
 src-git telephony http://git.openwrt.org/feed/telephony.git
 src-git management https://github.com/openwrt-management/packages.git
-src-git oldpackages http://git.openwrt.org/packages.git
+src-git oldpackages http://git.openwrt.org/packages.git^2f8b5c3a58d070960e5bda418f9b4feb28629fa0
 src-git cero https://github.com/dtaht/ceropackages-3.10
