Added openwrt as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ow-python"]
 	path = ow-python
 	url = https://github.com/EFForg/ow-python
+[submodule "openwrt"]
+	path = openwrt
+	url = git://git.openwrt.org/openwrt
